--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "bluebird": "3.4.1",
+    "debug": "2.2.0",
     "lodash": "4.13.1",
     "scraperjs": "1.2.0"
   }
