--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jscs": "3.0.7"
   },
   "dependencies": {
+    "async": "2.0.0",
     "bluebird": "3.4.1",
     "debug": "2.2.0",
     "lodash": "4.13.1",
