--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Scraps popular blogging website https://medium.com and find all possible hyperlinks present within https://medium.com website and generate a CSV output.",
   "main": "index.js",
   "scripts": {
+    "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
